finished second assignment

--- a/lab2/Makefile
+++ b/lab2/Makefile
@@ -1,7 +1,8 @@
 .PHONY: all clean
 
 all:
-	g++ ./main.cc -o ./build/main
+	@mkdir -p build
+	g++ main.cc -o ./build/main
 
 clean:
 	rm -f ./build/main
